force-app/main/default/objects/Test_Questions__c/Test_Questions__c.object-meta.xml
<CustomObject>
    <label>Test Questions</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Test Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>