force-app/main/default/objects/Test_Questions__c/fields/Multiple_Selection__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Selection</label>
    <type>Checkbox</type>
</CustomField>