force-app/main/default/objects/Test_Questions__c/fields/Test_Set__c.field-meta.xml
<CustomField>
    <fullName>Test_Set__c</fullName>
    <label>Test Set</label>
    <referenceTo>Test_Set__c</referenceTo>
    <relationshipLabel>Test Questions</relationshipLabel>
    <relationshipName>Test_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>